# Armchair-Strategist

./: .gitignore  .pre-commit-config.yaml  .pylint.toml  .ruff.toml  README.md  SCHEMA.md  app.py  auto-push.exp  data-refresh.sh  data_loading.ipynb  data_transformation.ipynb  pyproject.toml  readme_machine.py  reddit_machine.py  requirements.txt  trigger.bat  visualization.ipynb  visualization_funcs.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: check_app_run.yml  check_pr.yml
.ipynb_checkpoints/: data_loading-checkpoint.ipynb  data_transformation-checkpoint.ipynb  visualization-checkpoint.ipynb
Automation/: auto-pull.exp  auto-push.exp  data-refresh.sh  start-server.sh  sync-code.sh  test-server.sh
Comments/: f1technical_comment.md  formula1_comment.md
Dashboard/: app.py  graphs.py  visualization_config.toml
Data/: all_laps_2023.csv  all_laps_2024.csv  compound_selection.toml  transformed_laps_2020.csv  transformed_laps_2023.csv  transformed_laps_2024.csv  visualization_config.toml
Data/grand_prix/: all_grand_prix_laps_2024.csv  all_grand_prix_laps_2025.csv  all_grand_prix_laps_2026.csv  transformed_grand_prix_laps_2018.csv  transformed_grand_prix_laps_2019.csv  transformed_grand_prix_laps_2020.csv  transformed_grand_prix_laps_2021.csv  transformed_grand_prix_laps_2022.csv  transformed_grand_prix_laps_2023.csv  transformed_grand_prix_laps_2024.csv  transformed_grand_prix_laps_2025.csv  transformed_grand_prix_laps_2026.csv
Data/sprint/: all_sprint_laps_2021.csv  all_sprint_laps_2022.csv  all_sprint_laps_2023.csv  all_sprint_laps_2024.csv  all_sprint_laps_2025.csv  all_sprint_laps_2026.csv  transformed_sprint_laps_2021.csv  transformed_sprint_laps_2022.csv  transformed_sprint_laps_2023.csv  transformed_sprint_laps_2024.csv  transformed_sprint_laps_2025.csv  transformed_sprint_laps_2026.csv
F1_visualization/: adhoc_visuals.py
Notebooks/: data_loading.ipynb  data_transformation.ipynb  jay_viz.ipynb  visualization.ipynb
dashboard/: graphs.py  layout.py
doc_cache/2022/2022-10-30_Mexico_City_Grand_Prix/2022-10-29_Qualifying/: driver_info.ff1pkl  race_control_messages.ff1pkl  session_status_data.ff1pkl  timing_app_data.ff1pkl  timing_data.ff1pkl  track_status_data.ff1pkl  weather_data.ff1pkl
doc_cache/2022/2022-10-30_Mexico_City_Grand_Prix/2022-10-30_Race/: driver_info.ff1pkl  race_control_messages.ff1pkl  session_status_data.ff1pkl  timing_app_data.ff1pkl  timing_data.ff1pkl  track_status_data.ff1pkl  weather_data.ff1pkl
f1_visualization/: _consts.py  _types.py  annotations.py  consts.py  exceptions.py  preprocess.py  readme_machine.py  visualization.py
f1_visualization/plotly_dash/: graphs.py  layout.py  visualization_config.toml
src/: adhoc_visuals.py  main.py  preprocess.py  readme_machine.py  readme_update.py  visualization.py
